--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,8 @@
 body {
+    width: 100%;
     height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
+    padding: 0%;
+    margin: 0%;
     background-size: cover;
-    background-image: url("https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-25.jpg");
+    background-image: url("https://res.allmacwallpaper.com/get/Retina-MacBook-Air-13-inch-wallpapers/dark-starry-sky-stars-4k-2560x1600/22301-11.jpg");
 }
